# discord-bot

./: .gitignore  Dockerfile  Pipfile  bot.py  docker-compose.yaml  embed.py  pyproject.toml
